--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -475,6 +475,14 @@
               조회
               <span th:text="${post.view_count}">30</span>
             </span>
+            <span>
+              공감
+              <span th:text="${post.view_count}">10</span>
+            </span>
+            <span>
+              신고
+              <span th:text="${post.view_count}">1</span>
+            </span>
           </div>
 
           <hr class="post-separator" />
