--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -33,7 +33,7 @@
           <div class="input-group">
             <input
               type="password"
-              name="password"
+              name="pwd"
               placeholder="비밀번호를 입력하세요"
               required
             />
